<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_view_rute"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/post_rt_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tittlePlace"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tittle_place"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imagePlace"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/image_description" />

            <ImageButton
                android:id="@+id/placeFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pos_rt_fav"
                android:src="@drawable/post_rt_fav" />

            <TextView
                android:id="@+id/descriptionPlace"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "18sp"
                android:text="@string/post_text_desc" />

            <TextView
                android:id="@+id/post_rt_info_location"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_rt_info_location"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationPlace"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="location"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/post_rt_info_rating"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_rt_info_rating"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingPlace"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/notrating"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/post_rt_info_accessibility"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_rt_info_accessibility"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accessibilityPlace"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descriptionAccesibilityPl"
                android:text="accessibility"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/comments"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_comments"
                style="@style/CustomTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/myComments"
                style="@style/CustomTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/comments_here"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/writeComments"
                android:layout_width="match_parent"
                style="@style/CustomTheme"
                android:labelFor="@+id/MyComment"
                android:accessibilityLiveRegion="polite"
                android:hint="@string/write_comment"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/myComment"
                    style="@style/CustomTheme"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName|textCapSentences|textAutoCorrect" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sendCommentPlace"
                style="@style/CustomTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_comment" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>