<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rutas"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_route_black_24dp"
        android:title="@string/rutes"/>

    <item
        android:id="@+id/menu_places"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_monument_black_24dp"
        android:title="@string/places" />

    <item
        android:id="@+id/menu_search"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

</menu>