<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rutas"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_directions_walk_white_24dp"
        android:title="@string/rutes_menu"/>

    <item
        android:id="@+id/menu_maps"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/look_maps" />

    <item
        android:id="@+id/menu_fav"
        style="@style/CustomTheme"
        android:clickable="true"
        android:focusable="true"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/look_fav" />
</menu>