<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgPlacee"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_desc_img"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tittlePlace"
            style="@style/CustomTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_place"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/descriptionPlace"
            style="@style/CustomTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_place"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>