<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/newName_text_input_layout"
            style="@style/CustomTheme"
            android:layout_width="match_parent"
            android:labelFor="@+id/newName"
            android:accessibilityLiveRegion="polite"
            android:hint="@string/newName"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newName"
            style="@style/CustomTheme"
            android:layout_width="match_parent"
            android:inputType="textPersonName|textCapSentences|textAutoCorrect" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/Update"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:contentDescription="@string/btUpdateDesc"
            android:text="@string/btUpdate"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="191dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>